selfhost/test/typechecker/binary/plus_eq_error.2.out
Error at %FILE_NAME%:3:5
Unexpected token '+=':
  |  i() += 2
         ^
